5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1578_1331.log
== TEST (2019-03-11 19:14:31) 
-- CODE:
g=3
i=1
m=50
d=m//g
print(d)
print()
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:15:35) 
-- CODE:
g=3
i=m-d
m=50
d=m//g
print(d)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i=m-d
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:16:38) 
-- CODE:
g=3
m=50
d=m//g
i-m/g
print(d)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i-m/g
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:17:30) 
-- CODE:
g=3
m=50
d=m/g
i-m/g
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i-m/g
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:18:41) 
-- CODE:
g=3
m=50
d=m/g
print(d)

-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:18:54) 
-- CODE:
g=3
m=50
d=m//g
print(d)

-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:20:15) 
-- CODE:
g=3
m=50
d=m//g
i=m-d*3
print(d)
print(i)

-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:20:17) 
-- CODE:
g=3
m=50
d=m//g
i=m-d*3
print(d)
print(i)

-- EXECUTION TIME:
0.20333
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
